# symkern

./: .gitignore  README.md  pyproject.toml
.symkern/skills/: registry.json
artifacts/explain-machine_code/: periscope.md
artifacts/run-20260510T131501Z/: machine_artifact.json  periscope.md
artifacts/run-20260510T132422Z/: machine_artifact.json  periscope.md
artifacts/run-20260510T132437Z/: machine_artifact.json  periscope.md
artifacts/run-20260510T132756Z/: machine_artifact.json  machine_language.json  periscope.md
artifacts/run-20260510T135540Z/: machine_artifact.json  machine_language.json  periscope.md
artifacts/run-20260510T135554469641Z/: machine_artifact.json  machine_language.json  periscope.md
artifacts/run-20260510T135554520384Z/: machine_artifact.json  machine_language.json  periscope.md
artifacts/run-20260510T145254874576Z/: machine_artifact.json  machine_language.json  periscope.md
benchmarks/: README.md  gaussian_array_stats.c  illustrious_death_selector.c  run_benchmarks.py  symkern_core_entry.py
benchmarks/results/: latest.json  (+1 more)
examples/: anthropic_historical_death_lookup.sh  ollama_gaussian_stats.sh  openai_compatible_anomaly_detection.sh
plans/: README.md  capability-library.md  deployment-artifacts.md  program-creation-contract.md  skill-trust-model.md
scripts/: create_program.sh  invoke_program.sh
tests/: test_array_prompt_flow.py  test_artifacts.py  test_demo_anomaly_detection.py  test_historical_prompt_flow.py  test_intent_compiler.py  test_operator_compiler.py  test_program_spec_flow.py  test_translator_adapter.py
(+59 files in other folders)
