[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symkern"
version = "0.1.0"
description = "Prototype machine-native symbolic kernel with prompt-to-artifact execution."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
symkern = "symkern.cli:main"
symkern-demo = "symkern.demo.anomaly_detection:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
symkern = ["resources/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
